[project]
name = "cache-tester"
version = "0.1.0"
description = "Append-only prompt cache tester for local LLM endpoints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[project.scripts]
cache-tester = "cache_tester.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
